
[TestMarkdownPresenter_Present - 1]
# v0.19.1

### Bug Fixes

- Redirect cursor hide/show to stderr [PR [#456](https://github.com/anchore/syft/pull/456)]

### Added Features

- added feature [PR [#457](https://github.com/anchore/syft/pull/457) @wagoodman]
- another added feature

### Breaking Changes

- breaking change [Issue [#450](https://github.com/anchore/syft/issues/450)] [PR [#458](https://github.com/anchore/syft/pull/458) @wagoodman]

**[(Full Changelog)](https://github.com/anchore/syft/compare/v0.19.0...v0.19.1)**

---

[TestMarkdownPresenter_Present_NoTitle - 1]
### Bug Fixes

- Redirect cursor hide/show to stderr [PR [#456](https://github.com/anchore/syft/pull/456)]

**[(Full Changelog)](https://github.com/anchore/syft/compare/v0.19.0...v0.19.1)**

---

[TestMarkdownPresenter_Present_NoChanges - 1]
# Changelog

**[(Full Changelog)](https://github.com/anchore/syft/compare/v0.19.0...v0.19.1)**

---

[TestMarkdownPresenter_Present_Toolchain - 1]
# Changelog

### Bug Fixes

- Redirect cursor hide/show to stderr [PR [#456](https://github.com/anchore/syft/pull/456)]

### Toolchain

- Go: 1.21 → 1.23

**[(Full Changelog)](https://github.com/anchore/syft/compare/v0.19.0...v0.19.1)**

---

[TestMarkdownPresenter_Present_ToolchainDowngrade - 1]
# Changelog

### Toolchain

- Go: 1.23 → 1.21 (downgrade)

**[(Full Changelog)](https://github.com/anchore/syft/compare/v0.19.0...v0.19.1)**

---
